<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="nc_text_create_account">Create an account</string>
    <string name="nc_text_change_password">Change password</string>
    <string name="nc_text_change_your_password">Change your password</string>
    <string name="nc_text_recover_password">Recover password</string>
    <string name="nc_text_update_password">Update password</string>
    <string name="nc_text_sign_in">Sign in</string>
    <string name="nc_text_send_temporary_password">Send a temporary password</string>
    <string name="nc_text_forgot_password_guide_line">Enter the email address you used to register with Nunchuk and we\'ll send you a temporary password for you to sign in.</string>

    <string name="nc_text_your_name">Your name</string>
    <string name="nc_text_email_address">Email address</string>

    <string name="nc_text_password">Password</string>
    <string name="nc_text_temporary_password">Temporary password</string>
    <string name="nc_text_current_password">Current password</string>
    <string name="nc_text_new_password">New password</string>
    <string name="nc_text_confirm_new_password">Confirm new password</string>
    <string name="nc_text_forgot_password">Forgot password?</string>

    <string name="nc_text_name_invalid">Name is invalid</string>
    <string name="nc_text_email_invalid">Email is invalid</string>
    <string name="nc_text_password_does_not_match">Confirm password does not match</string>
    <string name="nc_text_email_sent">We’ve sent a temporary password to %1$s. Please change your password.</string>
    <string name="nc_text_create_account_and_email_sent">We have created an account for you at %1$s and sent a temporary password to this email. Please change your password.</string>
    <string name="nc_text_reset_password">Reset password</string>
    <string name="nc_text_term_and_policy">By creating an account, you agree to our Terms and Conditions and Privacy Policy.</string>
    <string name="nc_text_term_and_policy_guest_mode">By creating an account or continuing as guest, you agree to our Terms and Conditions and Privacy Policy.</string>
    <string name="nc_hyperlink_text_term">Terms and Conditions</string>
    <string name="nc_hyperlink_text_policy">Privacy Policy</string>
    <string name="nc_text_verify_instruction">Please confirm your login by entering the confirmation code we sent to %s.</string>
    <string name="nc_text_confirmation_code">Confirmation Code</string>
    <string name="nc_text_continue">Continue</string>
    <string name="nc_text_sign_in_google">Sign in with Google</string>
    <string name="nc_text_sign_in_apple">Sign in with Apple</string>
    <string name="nc_text_skip">Skip</string>
    <string name="nc_text_sign_in_disclaim">We use email as the user ID for collaborative wallet and interpersonal messaging features. For stand-alone wallet that doesn’t require email sign up, please use the desktop app.</string>
    <string name="nc_toolbar_title_change_password">Change your password</string>
    <string name="nc_toolbar_title_new_device">Confirm that it\'s you</string>
    <string name="nc_text_signin_guest_mode">Continue as guest</string>
    <string name="nc_text_signup_primary_key">Create account using Primary Key</string>
    <string name="nc_text_signin_primary_key">Sign in with Primary Key</string>
    <string name="nc_text_signin_via_digital_signature">Sign in via digital signature</string>
    <string name="nc_text_change_your_password_info">We’ve sent a temporary password to %1$s. Please change your password.</string>
    <string name="nc_error_unconfirmed_coin_can_not_locked">Unconfirmed coins cannot be locked</string>
    <string name="nc_text_resend_code">Resend code</string>
    <string name="nc_text_expired_time_instruction">Confirmation code expires in</string>
    <string name="nc_select_your_account_type">Please select your account type</string>
    <string name="nc_have_a_paid_subscription">I have a paid subscription</string>
    <string name="nc_have_a_primary_key_account">I have a Primary Key account</string>
    <string name="nc_text_resend_password">Resend password</string>
    <string name="nc_your_name">Your name</string>
    <string name="nc_enter_your_password">Enter your password</string>
    <string name="nc_enter_your_name">Enter your name</string>
    <string name="nc_resend_request_submitted">Resend request submitted, please check your email in a moment</string>
    <string name="nc_try_again_in">try again in</string>
    <string name="nc_sign_in_via_primary_key">Sign in via Primary Key</string>
    <string name="nc_text_password_number_error">Password must contain at least one number</string>
    <string name="nc_text_password_special_char_error">Password must contain at least one special character</string>
    <string name="nc_text_password_upper_case_error">Password must contain at least one upper case letter</string>
    <string name="nc_text_password_length_error">Password must be at least 8 characters long</string>
    <string name="nc_biometric_login_not_setup">You have not set up sign in using Fingerprint. To set it up, please sign in to your account and navigate to: Profile → Security Settings.</string>
</resources>