<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/nc_background"
    android:fitsSystemWindows="true"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingVertical="@dimen/nc_padding_16"
    tools:ignore="ContentDescription">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/nc_toolbar_title_change_password" />


    <com.nunchuk.android.widget.NCFontTextView
        android:id="@+id/emailSentDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/nc_padding_16"
        android:layout_marginTop="@dimen/nc_padding_8"
        android:background="@drawable/nc_rounded_whisper_background"
        android:drawablePadding="@dimen/nc_padding_8"
        android:gravity="center_vertical"
        android:padding="@dimen/nc_padding_16"
        android:visibility="gone"
        app:drawableStartCompat="@drawable/ic_info"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        tools:text="We’ve sent a temporary password to xxx@gmail.com. Please change your password"
        tools:visibility="visible" />

    <com.nunchuk.android.widget.NCEditTextView
        android:id="@+id/oldPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/nc_padding_16"
        android:layout_marginTop="@dimen/nc_padding_16"
        app:edit_title="@string/nc_text_current_password"
        app:errorEnabled="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailSentDescription" />

    <com.nunchuk.android.widget.NCEditTextView
        android:id="@+id/newPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/nc_padding_16"
        android:layout_marginTop="@dimen/nc_padding_16"
        app:edit_title="@string/nc_text_new_password"
        app:errorEnabled="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/oldPassword" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/passwordErrorGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="tv_at_least_8_characters,tv_at_least_one_upper_case,tv_at_least_one_number,tv_at_least_one_special_char" />

    <TextView
        android:id="@+id/tv_at_least_8_characters"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/nc_padding_16"
        android:layout_marginTop="@dimen/nc_padding_8"
        android:drawablePadding="@dimen/nc_padding_4"
        android:text="@string/nc_text_password_length_error"
        android:textAppearance="@style/NCText.Body.Small"
        app:drawableStartCompat="@drawable/ic_dot"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newPassword" />

    <TextView
        android:id="@+id/tv_at_least_one_upper_case"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/nc_padding_16"
        android:layout_marginTop="@dimen/nc_padding_4"
        android:drawablePadding="@dimen/nc_padding_4"
        android:text="@string/nc_text_password_upper_case_error"
        android:textAppearance="@style/NCText.Body.Small"
        app:drawableStartCompat="@drawable/ic_dot"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_at_least_8_characters" />

    <TextView
        android:id="@+id/tv_at_least_one_number"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/nc_padding_16"
        android:layout_marginTop="@dimen/nc_padding_4"
        android:drawablePadding="@dimen/nc_padding_4"
        android:text="@string/nc_text_password_number_error"
        android:textAppearance="@style/NCText.Body.Small"
        app:drawableStartCompat="@drawable/ic_dot"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_at_least_one_upper_case" />

    <TextView
        android:id="@+id/tv_at_least_one_special_char"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/nc_padding_16"
        android:layout_marginTop="@dimen/nc_padding_4"
        android:drawablePadding="@dimen/nc_padding_4"
        android:text="@string/nc_text_password_special_char_error"
        android:textAppearance="@style/NCText.Body.Small"
        app:drawableStartCompat="@drawable/ic_dot"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_at_least_one_number" />

    <com.nunchuk.android.widget.NCEditTextView
        android:id="@+id/confirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/nc_padding_16"
        android:layout_marginTop="@dimen/nc_padding_16"
        app:edit_title="@string/nc_text_confirm_new_password"
        app:errorEnabled="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_at_least_one_special_char" />

    <com.nunchuk.android.widget.NCFontButton
        android:id="@+id/changePassword"
        style="@style/NCPrimaryButton.Dark"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/nc_padding_16"
        android:layout_marginTop="@dimen/nc_padding_18"
        android:text="@string/nc_text_change_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirmPassword" />

</androidx.constraintlayout.widget.ConstraintLayout>
