<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/nc_white_color"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/nc_padding_16"
    tools:ignore="ContentDescription">

    <ImageView
        android:layout_width="64dp"
        android:layout_height="wrap_content"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_logo"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.nunchuk.android.widget.NCEditTextView
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/nc_padding_16"
        app:edit_title="@string/nc_text_your_name"
        app:errorEnabled="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guideline" />

    <com.nunchuk.android.widget.NCEditTextView
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/nc_padding_16"
        app:edit_title="@string/nc_text_email_address"
        app:errorEnabled="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.2" />

    <com.nunchuk.android.widget.NCFontButton
        android:id="@+id/signUp"
        style="@style/NCPrimaryButton.Dark"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/nc_padding_16"
        android:text="@string/nc_text_create_account"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email" />

    <com.nunchuk.android.widget.NCFontButton
        android:id="@+id/signIn"
        style="@style/NCPrimaryButton.Light"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/nc_padding_16"
        android:text="@string/nc_text_sign_in"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signUp" />

</androidx.constraintlayout.widget.ConstraintLayout>
