<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/nc_background"
    android:fitsSystemWindows="true"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingVertical="@dimen/nc_padding_16"
    tools:ignore="ContentDescription">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/NCToolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.nunchuk.android.widget.NCFontTextView
            android:id="@+id/toolbarTitle"
            style="@style/NCToolbar.Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nc_text_change_your_password" />
    </androidx.appcompat.widget.Toolbar>

    <com.nunchuk.android.widget.NCFontTextView
        android:id="@+id/warning"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/nc_padding_16"
        android:layout_marginBottom="@dimen/nc_padding_12"
        android:layout_marginTop="@dimen/nc_padding_16"
        android:background="@drawable/nc_rounded_whisper_background"
        android:drawableStart="@drawable/ic_info"
        android:drawablePadding="@dimen/nc_padding_8"
        android:paddingVertical="@dimen/nc_padding_8"
        android:paddingHorizontal="@dimen/nc_padding_16"
        android:textColor="@color/nc_text_primary"
        android:textSize="@dimen/nc_text_size_12"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintStart_toStartOf="parent" />

    <com.nunchuk.android.widget.NCEditTextView
        android:id="@+id/oldPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/nc_padding_16"
        android:layout_marginTop="@dimen/nc_padding_24"
        app:edit_title="@string/nc_text_temporary_password"
        app:errorEnabled="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/warning" />

    <com.nunchuk.android.widget.NCEditTextView
        android:id="@+id/newPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/nc_padding_16"
        android:layout_marginTop="@dimen/nc_padding_16"
        app:edit_title="@string/nc_text_new_password"
        app:errorEnabled="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/oldPassword" />

    <com.nunchuk.android.widget.NCEditTextView
        android:id="@+id/confirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/nc_padding_16"
        android:layout_marginTop="@dimen/nc_padding_16"
        app:edit_title="@string/nc_text_confirm_new_password"
        app:errorEnabled="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newPassword" />

    <com.nunchuk.android.widget.NCFontButton
        android:id="@+id/recoverPassword"
        style="@style/NCPrimaryButton.Dark"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/nc_padding_16"
        android:layout_marginTop="@dimen/nc_padding_18"
        android:text="@string/nc_text_update_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirmPassword" />

</androidx.constraintlayout.widget.ConstraintLayout>
