<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/nc_background"
    android:fitsSystemWindows="true"
    android:gravity="center"
    android:orientation="vertical"
    tools:ignore="ContentDescription">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/NCToolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_close">

        <com.nunchuk.android.widget.NCFontTextView
            android:id="@+id/toolbarTitle"
            style="@style/NCToolbar.Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nc_text_reset_password" />
    </androidx.appcompat.widget.Toolbar>

    <com.nunchuk.android.widget.NCFontTextView
        android:id="@+id/forgotPasswordDesc"
        style="@style/NCText.Body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/nc_padding_16"
        android:layout_marginTop="@dimen/nc_padding_32"
        android:gravity="center_vertical"
        android:text="@string/nc_text_forgot_password_guide_line"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/email_label"
        style="@style/NCText.EditText.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/nc_padding_16"
        android:layout_marginTop="@dimen/nc_padding_24"
        android:layout_marginEnd="@dimen/nc_padding_16"
        android:text="@string/nc_text_email_address"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgotPasswordDesc" />

    <com.nunchuk.android.widget.NCEditTextView
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/nc_padding_16"
        app:errorEnabled="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_label" />

    <com.nunchuk.android.widget.NCFontButton
        android:id="@+id/forgotPassword"
        style="@style/NCPrimaryButton.Dark"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/nc_padding_16"
        android:text="@string/nc_text_send_temporary_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email" />

</androidx.constraintlayout.widget.ConstraintLayout>
